--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,19 +15,19 @@
             
       <div class="row justify-content-center" style="margin-top: 20px;">
         <div class="col-6">
-          <h3>Форма для авторизации</h3>
-          <form method="post" action="/">
+          <h3>Форма для регистрации</h3>
+          <form method="post" action="register">
             <div class="mb-3">
               <label for="inputLogin" class="form-label">Login</label>
               <input type="text" class="form-control" id="inputLogin" name="login">
-              <div id="loginHelp" class="form-text">We'll never share your login with anyone else.</div>
+              <div id="loginHelp" class="form-text">Enter your login for registrations.</div>
             </div>
             <div class="mb-3">
               <label for="inputPassword" class="form-label">Password</label>
               <input type="password" class="form-control" id="inputPassword" name="password">
             </div>            
             <div class="float-end">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
             </div>            
           </form>
         </div>       
