--- a/views/forms.ejs
+++ b/views/forms.ejs
@@ -3,12 +3,25 @@
   <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    
+    <!--Тестовая передача переменной в js ejs-->
+    <script type = "text/javascript">
+      var tt = '<%- test %>';
+      console.log(JSON.parse(tt));
+    </script>
+    <!----------------------------------------->
+  
   </head> 
   <body>
-    <div class="container">      
+    <div class="container">
+      <div class="row justify-content-end mt-3" >
+        <div class="col-2">          
+          <p class="text-info text-center">User: <%= login %></p>
+        </div>          
+      </div>      
       <div class="row justify-content-center" style="margin-top: 20px;">
         <div class="col-6">
-          <form method = "post" action="/forms">
+          <form ref='uploadForm' id='uploadForm' method = "post" action="/forms" encType="multipart/form-data">
             <div class="mb-3">
                 <label for="input" class="form-label">Enter any text</label>
                 <input type="text" class="form-control" id="input" placeholder="input text" name="input">
@@ -24,7 +37,7 @@
             <div class="float-end">
               <button type="submit" class="btn btn-primary">Загрузить</button>
             </div>
-          </form> 
+          </form>           
         </div>       
       </div>      
     </div>    
