--- a/views/forms.ejs
+++ b/views/forms.ejs
@@ -23,11 +23,11 @@
         <div class="col-6">
           <form ref='uploadForm' id='uploadForm' method = "post" action="/forms" encType="multipart/form-data">
             <div class="mb-3">
-                <label for="input" class="form-label">Enter any text</label>
+                <label for="input" class="form-label">Name blog</label>
                 <input type="text" class="form-control" id="input" placeholder="input text" name="input">
             </div>
             <div class="mb-3">
-                <label for="textarea" class="form-label">Textarea</Textarea></label>
+                <label for="textarea" class="form-label">Text for blog</Textarea></label>
                 <textarea class="form-control" id="textarea" rows="3" name="text"></textarea>
             </div>
             <div class="mb-3">
@@ -35,7 +35,7 @@
                 <input class="form-control" type="file" id="file" name="file">
             </div>
             <div class="float-end">
-              <button type="submit" class="btn btn-primary">Загрузить</button>
+              <button type="submit" class="btn btn-primary">Save</button>
             </div>
           </form>           
         </div>       
